--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "firebase": "^9.9.2",
+    "lodash.debounce": "^4.0.8",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.7.6",
     "@types/react": "^18.0.17",
     "eslint": "8.22.0",
