--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-markdown": "^8.0.3",
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
