--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.34.2",
     "react-markdown": "^8.0.3",
     "react-toastify": "^9.0.8"
   },
